Add Vorlesung 1 from 08.04.2019

--- a/Allgemein/Packages.tex
+++ b/Allgemein/Packages.tex
@@ -46,6 +46,7 @@
 \usepackage{mdframed} % erstellen von Definition
 \usepackage{lipsum}
 \newmdtheoremenv{defi}{Definition}
+\usepackage{float} 
 
 
 \usepackage{makeidx} % für Index-Ausgabe mit \printindex
